Correct overflow

--- a/src/Sidebar/index.scss
+++ b/src/Sidebar/index.scss
@@ -37,6 +37,7 @@
     flex-direction: column;
     align-items: stretch;
     overflow-y: auto;
+    overflow-x: hidden;
     background: rgba(var(--zn-panel), var(--zn-panel-opacity));
 
     @include wc.container-query(ph) {
